# KirkForge-Plugin2

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  changelog.md  deny.toml  plugin2-gaps-status.md
.github/workflows/: ci.yml  release.yml
crates/kirkstratum-cli/: Cargo.toml
crates/kirkstratum-cli/src/: cli.rs  init.rs
crates/kirkstratum-cli/tests/: integration.rs
crates/kirkstratum-core/: Cargo.toml
crates/kirkstratum-core/config/: pipeline.toml
crates/kirkstratum-core/examples/: library_usage.rs
crates/kirkstratum-core/src/: config.rs  pipeline.rs
crates/kirkstratum-hosts/: Cargo.toml
crates/stratum-cli/: Cargo.toml
crates/stratum-cli/src/: main.rs
crates/stratum-core/: Cargo.toml
crates/stratum-core/src/: content.rs  error.rs  lib.rs  mode.rs  pipeline.rs  store.rs
crates/stratum-hosts/: Cargo.toml
crates/stratum-hosts/src/: lib.rs  rules.rs
docs/adr/: 0001-plugin-purpose.md  0002-workspace-layout.md  0003-two-transform-split.md  0004-offload-store.md  0005-pipeline-orchestrator.md  0006-mode-and-config.md  0007-toml-config-embedded.md  0008-cross-host-adapters.md  0009-output-shim.md  0010-hooks-integration.md  0011-error-philosophy.md  0012-deactivation-match.md  0013-stratum-comment-convention.md  0014-content-detection.md  0015-state-management.md  0016-cli-design.md  0017-test-strategy.md  0018-build-feature-gating.md  README.md
docs/rules/: CANONICAL.md
plugin/hooks/: pre-tool-bash.sh  session-start.sh
plugin/tools/: apply.sh  config_validate.sh  mode.sh  rules.sh  run.sh
plugins/stratum-agent-hooks/: README.md
plugins/stratum-agent-hooks/.claude-plugin/: marketplace.json
plugins/stratum-agent-hooks/hooks/: hooks.json
