[workspace]
resolver = "2"
members = [
    "crates/stratum-core",
    "crates/stratum-cli",
    "crates/stratum-hosts",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://example.invalid/stratum"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
rayon = "1"
blake3 = "1"
sha2 = "0.10"
toml = "0.8"
memchr = "2"
parking_lot = "0.12"
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

[profile.ci]
inherits = "release"
debug = "line-tables-only"
incremental = false
