[workspace]
resolver = "2"
members = [
    "crates/kirkstratum-core",
    "crates/kirkstratum-cli",
    "crates/kirkstratum-hosts",
]

[workspace.package]
edition = "2021"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kirkstratum/stratum"
description = "Context-compression toolkit for LLM prompts"
readme = "README.md"
keywords = ["compression", "llm", "context", "prompt"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
blake3 = "1"
toml = "0.8"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
anyhow = "1"

[profile.release]
strip = "symbols"
lto = "thin"
codegen-units = 1

[profile.ci]
inherits = "release"
debug = "line-tables-only"
incremental = false

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
all = "deny"
