[package]
name = "stratum-core"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
toml = { workspace = true }
memchr = { workspace = true }
parking_lot = { workspace = true }

[features]
default = []
sqlite = ["dep:rusqlite"]

[dependencies.rusqlite]
version = "0.31"
optional = true
